--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset",
+    "sync-users": "tsx scripts/sync-users.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.28.1",
@@ -41,6 +48,7 @@
     "react-hook-form": "^7.62.0",
     "react-konva": "^19.0.7",
     "sonner": "^2.0.7",
+    "svix": "^1.70.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.3",
@@ -55,6 +63,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
