--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
+    "@stripe/stripe-js": "^7.8.0",
     "@uploadthing/react": "^7.3.2",
     "@xyflow/react": "^12.8.2",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +51,7 @@
     "react-hook-form": "^7.62.0",
     "react-konva": "^19.0.7",
     "sonner": "^2.0.7",
+    "stripe": "^18.4.0",
     "svix": "^1.70.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
